# forking-llama-cpp-api

./: .gitmodules  CMakeLists.txt  README.md
simple-frontend/: index.html
src/: json.h  main.cpp
src/messages/: buffer.h  common.h
src/model/: llama.cpp  llama.h  message_sender.cpp  message_sender.h  model.cpp  model.h  printer.cpp  printer.h  subscriber.h
src/process/: model_runner.cpp  model_runner.h  process.h
